@@ -1,2 +1,2 @@
 <?xml version='1.0' encoding='utf-8'?>
-<seq><seq><id>def</id><id>x</id><punct type='='/><seq><lit type='int'>12</lit><punct type='`'/><id>in</id></seq></seq><seq><id>def</id><id>y</id><punct type='='/><seq><lit type='real'>12.340000</lit><punct type='`'/><id>cm</id></seq></seq><seq><id>def</id><id>y</id><punct type='='/><seq><lit type='ratio'>12/33</lit><punct type='`'/><id>m/s</id></seq></seq><seq><id>def</id><id>a</id><punct type='='/><nested left='#[' right=']'><seq><lit type='int'>1</lit><punct type='`'/><id>px</id></seq><punct type=','/><seq><lit type='int'>20</lit><punct type='`'/><id>px</id></seq></nested></seq></seq>
+<seq><seq><id>def</id><id>x</id><punct type='='/><seq><lit type='int'>12</lit><punct type='&apos;'/><id>in</id></seq></seq><seq><id>def</id><id>y</id><punct type='='/><seq><lit type='real'>12.340000</lit><punct type='&apos;'/><id>cm</id></seq></seq><seq><id>def</id><id>y</id><punct type='='/><seq><lit type='ratio'>12/33</lit><punct type='&apos;'/><id>m/s</id></seq></seq><seq><id>def</id><id>a</id><punct type='='/><nested left='#[' right=']'><seq><lit type='int'>1</lit><punct type='&apos;'/><id>px</id></seq><punct type=','/><seq><lit type='int'>20</lit><punct type='&apos;'/><id>px</id></seq></nested></seq></seq>
